tests/errors/err_immutable_shared_update.mix
// ERROR: cannot call mutating method 'update!' through immutable 'counter'
main()
    counter = shared int(0)
    counter.update!(v => v + 1)
